--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -1,24 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-    <file source-language="en" datatype="plaintext" original="EXT:htmltables/Resources/Private/Language/locallang.xlf" date="2023-07-24-2023T16:38:34Z" product-name="htmltables">
-        <header/>
-        <body>
-            <trans-unit id="headerComment" resname="headerComment" approved="yes">
-                <source>The default Header Comment.</source>
-            </trans-unit>
-            <trans-unit id="generator" resname="generator" approved="yes">
-                <source>The Generator Meta Tag.</source>
-            </trans-unit>
-            <trans-unit id="htmltables_htmltable_title" resname="htmltables_htmltable_title" approved="yes">
-                <source>Html Table</source>
-            </trans-unit>
-            <trans-unit id="htmltables_htmltable_description" resname="htmltables_htmltable_description" approved="yes">
-                <source>Create HTML tables with inline relational editing</source>
-            </trans-unit>
-            <trans-unit id="table_row_title" resname="table_row_title" approved="yes">
-                <source>Table row</source>
-            </trans-unit>
-        </body>
-    </file>
+	<file source-language="en" datatype="plaintext" original="EXT:htmltables/Resources/Private/Language/locallang.xlf" date="2023-07-24-2023T16:38:34Z" product-name="htmltables">
+		<header/>
+		<body>
+			<trans-unit id="expand" resname="headerComment" approved="yes">
+				<source>Expand table</source>
+			</trans-unit>
+			<trans-unit id="htmltables_htmltable_title" resname="htmltables_htmltable_title" approved="yes">
+				<source>Html Table</source>
+			</trans-unit>
+			<trans-unit id="htmltables_htmltable_description" resname="htmltables_htmltable_description" approved="yes">
+				<source>Create HTML tables with inline relational editing</source>
+			</trans-unit>
+			<trans-unit id="table_row_title" resname="table_row_title" approved="yes">
+				<source>Table row</source>
+			</trans-unit>
+		</body>
+	</file>
 </xliff>
 
